[BE] fix: applicaiton.properties 수정